# dbutils

./: .gitignore  AGENTS.md  ASYNC_MOCK_WORKER_FIX.md  AUTOMATIC_DOWNLOAD_TESTING.md  AUTO_DOWNLOAD_IMPLEMENTATION.md  CODE_REVIEW_REPORT.md  COMMIT_MESSAGE.txt  COMPLETE_E2E_TEST_GUIDE.md  CUSTOM_JDBC_PROVIDER.md  C_EXTENSIONS.md  C_EXTENSIONS_SUMMARY.md  DB2_PLATFORM_DETECTION.md  DB2_SEPARATION_COMPLETE.md  DB2_SEPARATION_IMPLEMENTATION_REPORT.md  DB_BROWSER_TUI.md  DOWNLOAD_FLOWS_TESTING_SUMMARY.md  DOWNLOAD_FLOWS_TEST_REPORT.md  DOWNLOAD_LINKS_VERIFICATION.md  DOWNLOAD_TESTING_VERIFICATION.md  E2E_TEST_SUMMARY.md  ENTRYPOINT_QUERY_SYSTEM.md  FOCUSED_PROJECT_SCOPE.md  GUI_TEST_COVERAGE_SUMMARY.md  HEAVY_MOCK_IMPLEMENTATION.md  HEAVY_MOCK_SYSTEM.md  HOMEBREW_DISTRIBUTION.md  HOMEBREW_TAP.md  JDBC_DOWNLOAD_BUTTON_FIX.md  JDBC_ONLY_MIGRATION_SUMMARY.md  KEY_LOOKUP_FIX.md  MULTI_DATABASE_SUPPORT.md  MULTI_DATABASE_TEST_RESULTS.md  OPTIMIZATION_SUMMARY.md  QTO_ONLY_FOCUS_CHANGES.md  QTO_OPTIMIZATION_SUMMARY.md  QT_ADVERSARIAL_TESTING_REPORT.md  QT_IMPLEMENTATION_COMPLETE.md  QT_TESTING_STRATEGY.md  QUERY_VALIDATION_ANALYSIS.md  QUICK_START_THREADING_TESTS.md  (+123 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  update-homebrew-formula.yml
Formula/: dbutils.rb
legacy_tests/: legacy_auto_download_infrastructure.py  legacy_comprehensive_project.py  legacy_custom_jdbc_provider.py  legacy_custom_jdbc_simple.py  legacy_final_verification.py  legacy_fix.py  legacy_functional_modules.py  legacy_individual_connections.py  legacy_integration_config.py  legacy_jdbc_download.py  legacy_jt400.py  legacy_jt400_alternative.py  legacy_jt400_mock.py  legacy_jt400_simple.py  legacy_jt400_simple_312.py  legacy_new_auto_download_config.py  legacy_optimized_edit_distance.py  legacy_provider_config_dialog.py  legacy_provider_config_dialog_edge_cases.py  legacy_qt_complete.py  legacy_real_schema.py  legacy_simple_integration.py  legacy_sqlite_jdbc.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-homebrew-tap.md  TASK002-sqlite-jdbc-deps.md  _index.md
src/dbutils/: __init__.py  accelerated.py  catalog.py  config_manager.py  db_analyze.py  db_browser.py  db_diff.py  db_health.py  db_indexes.py  db_inferred_orphans.py  db_inferred_ref_coverage.py  db_relate.py  db_search.py  db_table_sizes.py  enhanced_jdbc_provider.py  fast_ops.c  fast_ops.pyx  jdbc_provider.py  main.py  main_launcher.py  map_db.py  schema_detector.py  utils.py
src/dbutils/config/: auto_download_config.json  dbutils_config.py  entrypoint_queries.json  entrypoint_query_manager.py  jdbc_config.json  jdbc_templates.json  migration_config.py  path_config.py  schema_config.py  url_config.py
src/dbutils/gui/: accessibility.py  auth_manager.py  data_loader.py  data_loader_process.py  database_model.py  download_history.py  downloader_prefs.py  i18n.py  integration.py  jdbc_auto_downloader.py  jdbc_driver_downloader.py  jdbc_driver_manager.py  jdbc_provider_config.py  license_store.py  performance.py  provider_config.py  provider_config_dialog.py  provider_config_dialog_backup.py  qt_app.py  responsive.py  search_manager.py  table_contents_model.py  ui_components.py  ui_state.py  ui_styling.py
src/dbutils/gui/translations/: en_US.json
src/dbutils/gui/widgets/: enhanced_widgets.py
tests/: README.md  THREADING_TESTS_README.md  database_test_utils.py  test_accelerated.py  test_async_mock_worker.py  test_auto_download_handler.py  test_auto_download_workflow.py  test_busyoverlay_utils.py  test_catalog.py  test_catalog_api.py  test_comprehensive_provider_dialog.py  test_comprehensive_qt_browser.py  test_comprehensive_qt_workers.py  test_config.json  test_config_manager.py  test_config_system.py  test_data_loader_process.py  test_database_model.py  test_db_analyze.py  test_db_browser.py  test_db_browser_additional.py  test_db_browser_column_search.py  test_db_browser_column_select.py  test_db_browser_dacdata.py  test_db_browser_edge_cases.py  test_db_browser_functionality.py  test_db_browser_ohhst.py  test_db_browser_worst_cases.py  test_db_diff.py  test_db_health.py  test_db_indexes.py  test_db_inferred_orphans.py  test_db_inferred_ref_coverage.py  test_db_relate_enhanced.py  test_db_search.py  test_db_table_sizes.py  test_downloader_prefs.py  test_enhanced_auto_downloads.py  test_enhanced_auto_downloads_simple.py  test_enhanced_jdbc_provider.py  (+54 more)
tools/: verify_driver_links.py  verify_links_results.json
