[project]
name = "dbutils"
version = "0.1.0"
description = "Qt GUI Database Browser with JDBC support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "PySide6>=6.5.0",
    "JPype1>=1.5.0",
    "JayDeBeApi>=1.2.3",
]

[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
  gui = [
      "PySide6>=6.5.0",
      "PyQt6>=6.5.0"
  ]
  dev = [
      "ruff>=0.1.0",
      "pytest>=7.0.0",
      "PySide6>=6.5.0",
      "PyQt6>=6.5.0",
      "JPype1>=1.5.0",
      "JayDeBeApi>=1.2.3"
  ]
  cython = [
      "cython>=3.0.0",
      "numpy>=1.21.0"
  ]

[project.scripts]
  db-browser = "dbutils.main_launcher:main"
  db-browser-gui = "dbutils.gui.qt_app:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["dbutils*"]}}

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"src/dbutils/__init__.py" = ["F401"]
"src/dbutils/db_relate.py" = [
    "E501",  # Allow long lines for SQL queries
    "C901"   # Allow complex function for relationship inference
]
"src/dbutils/map_db.py" = [
    "E501",  # Allow long lines for SQL queries
    "C901"   # Allow complex function for relationship inference
]
# Removed references to db_diff.py and db_health.py which are no longer part of the source tree
"src/dbutils/db_search.py" = [
    "E501"   # Allow long lines for SQL queries
]
"src/dbutils/db_browser.py" = [
    "I001",   # Allow imports in try blocks without sorting
    "C901",   # Allow complex functions for search functionality
    "E501"    # Allow long lines for mock data definitions
]
"src/dbutils/gui/jdbc_auto_downloader.py" = [
    "C901"   # Allow complex functions for driver download logic
]
"src/dbutils/gui/jdbc_driver_downloader.py" = [
    "C901"   # Allow complex functions for driver download logic
]
"src/dbutils/gui/jdbc_driver_manager.py" = [
    "C901"   # Allow complex functions for driver management logic
]
"src/dbutils/gui/provider_config_dialog.py" = [
    "C901"   # Allow complex functions for GUI dialog logic
]
"src/dbutils/jdbc_provider.py" = [
    "C901"   # Allow complex functions for JVM management
]
"tests/test_config_manager.py" = [
    "C901"   # Allow complex functions for test configuration
]
"tests/test_enhanced_auto_downloads_simple.py" = [
    "C901"   # Allow complex functions for comprehensive test cases
]
"tests/database_test_utils.py" = [
    "C901"   # Allow complex functions for test utilities
]
"run_auto_download_tests.py" = [
    "C901"   # Allow complex functions for test runner
]
"setup_multi_database_test.py" = [
    "C901"   # Allow complex functions for test setup
]
"test_auto_download_infrastructure.py" = [
    "C901"   # Allow complex functions for infrastructure testing
]
"test_jt400_simple.py" = [
    "C901"   # Allow complex functions for JAR inspection
]
"verify_multi_database_setup.py" = [
    "C901"   # Allow complex functions for verification reporting
]

